# InvestorClaw

./: --verbose  .clawhubignore  .env.example  .gitignore  .gitlab-ci.yml  .skillignore  ARCHITECTURE.md  CAPABILITIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DISCLAIMER.md  DUAL-MODEL-ARCHITECTURE.md  FEATURES.md  FRED_FED_DECISIONS_1970_2026.md  INSTALL.md  KNOWN_ISSUES.md  LICENSE  MARKET_PREDICTION_SPINOFF_MA_MAP.md  MODELS.md  Makefile  PHASE_0_PROGRESS.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  REPOSITORY_STRUCTURE.md  SECURITY.md  SKILL.md  SKILL.toml  VERSION.md  ZEROCLAW_MODEL_SPAWN_DESIGN.md  device_matrix_results.json  generate_sample_portfolio.py  harness_results_tier1_STUDIO_gemma.json  harness_results_tierall_STUDIO_gemma.json  index.ts  install.sh  (+17 more)
.claude-plugin/: marketplace.json
.github/workflows/: test.yml
.upstream-drafts/: hermes-agent-issue.md  hermes-providers-pr.md  zeroclaw-issue.md
assets/: eod-report-sample.html
assets/stonkmode-avatars/: manifest.json
commands/: analyze_performance_polars.py  auto_setup.py  bond_analyzer.py  eod_report.py  export_report.py  fa_discussion.py  fetch_analyst_recommendations_parallel.py  fetch_holdings.py  fetch_portfolio_news.py  fixed_income_analysis.py  lookup.py  model_guardrails.py  news_fetch_planner.py  ollama_model_config.py  portfolio_analyzer.py  session_init.py  stonkmode_control.py
config/: command_builders.py  config_loader.py  deployment_modes.py  env_loader.py  feature_manager.py  guardrail_enforcer.py  help_text.py  llm-providers.yaml  model-recommendations.yaml  path_resolver.py  portfolio_sizer.py  schema.py
contract/: conformance-baseline-2026-04-25.txt  render.py  routes.toml  routing_rules.md.template
data/: .doc-index.yaml  MASTER_SYMBOLS_OPTIMIZED.yaml  guardrails.yaml
docs/: AGENT-COMPARISON.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_MODELS.md  CDM5_DATA_MODEL.md  COMMAND_INDEX.md  COMMERCIAL_LICENSE.md  CROSS_PROJECT_ANALYSIS.md  DASHBOARD_GUIDE.md  DATA_FLOW.md  FINANCIAL_TERMINOLOGY.md  IC_DECOMPOSITION_SPEC.md  IMAGE_OPTIMIZATION.md  LICENSE_FREE_TIER.md  MODELS.md  PHILOSOPHY.md  PLATFORM_COMPARISON.md  QUICKSTART_OPENCLAW.md  STONKMODE.md  STONKMODE_CHARACTER_REFERENCE.json  TABLE_RENDERING_GUIDE.md  UV_TRANSPARENT_MANAGEMENT.md  WINDOWS_SETUP_GUIDE.md  ZEROCLAW_MODEL_SPAWN_DESIGN.md  gemma4-consult.Modelfile  harness-v611.txt  harness-v612.txt  harness-v620-pi.txt  harness-v70.txt  harness-v71-pi.txt  harness-v71.txt  investorclaw_harness_v71.txt  investorclaw_harness_v71_pi.txt
docs/claude/: CLAUDE_API_INTEGRATION_OPPORTUNITIES.md  CLAUDE_QUICKSTART.md  CLAUDE_TESTING_AUTOMATION.md  README.md
docs/claw/: README.md
docs/claw/hermes/: README.md
docs/claw/openclaw/: README.md
docs/claw/shared/: FEATURE_MATRIX.md  README.md  (+2 more)
docs/samples/: README.md  sample_portfolio.csv  stress_test_500.csv
harness/: CLAUDE_CODE_TEXT_HARNESS.md  CONTRACT_PRESERVATION.md  DUAL_PATH_HARNESS_DESIGN.md  HARNESS_ARTIFACTS.txt  PHASE_STATUS.md  QUICK_START.md  README_PHASE3B.md  RUN_ON_LINUX_HOST.md  V11_RESTORATION_PLAN.md  command_matrix.py  contract_check.py  device_matrix.py  orchestrator.py  provider_matrix.py  remediation.py  run_cross_runtime_pilot.py  setup_gpu_host_ollama.sh  test_device_matrix.py  test_tier_execution.py  test_zeroclaw_orchestrator.py  v13_linux_x86_enterprise_cicd.py  v13_matrix_spec.txt  validate_devices.py
harness/agent_clients/: __init__.py  base.py  cli_adapter.py  gemma_client.py  google_client.py  hermes.py  openclaw.py  provider_client.py  provider_factory.py  together_client.py  xai_client.py  zeroclaw.py
harness/cobol/: AGENTIC_COBOL_SPEC.md  BLOG_DRAFT_techbroiler.md  README.md  aggregate_fleet_scores.py  cobol_barrage_cross_runtime.py  nlq-prompts.json  rescore_cross_runtime.py
harness/reports/: 2.5.0-fleet-aggregate-2026-04-28.json  2.5.0-fleet-aggregate-2026-04-28.md
hermes/: install.sh
installers/: setup.sh
installers/hermes/: README.md  install.sh
installers/openclaw/: README.md  install.sh
installers/zeroclaw/: install.sh
internal/: tier3_enrichment.py
models/: cdm_portfolio.py  context_budget.py  financial_query_router.py  holdings.py  models.py
openclaw/: README.md  install.sh  skill.json
providers/: broker_detector.py  fetch_bond_data.py  fetch_nasdaq_ftp_symbols.py  price_provider.py
references/: contract-input.md  contract-output.md  presentation-nl-query-routing.md  presentation-rules.md  runtime-gemma4-consult.md  runtime-openclaw-2026-4-9.md  schema-holdings-fields.md
rendering/: compact_serializers.py  disclaimer_wrapper.py  eod_email_template.py  progress.py  render_consultation_card.py  stonkmode.py  stonkmode_pairings.py  stonkmode_personas.py
runtime/: __init__.py  bootstrap.py  environment.py  router.py  subprocess_runner.py
scripts/: build_skill_bundle.py  run_benchmark.py  wf_results.jsonl
services/: consolidate_portfolios.py  consultation_policy.py  context_window_monitor.py  extract_pdf.py  portfolio_utils.py
setup/: eod_scheduler.py  first_run_check.py  identity_updater.py  installer.py  setup_wizard.py
standalone/: install.sh
tests/: test_command_contracts.py  test_compact_serializers.py  test_consultation_policy.py  test_context_budget.py  test_data_quality.py  test_deployment_modes.py  test_enricher_lifecycle.py  test_env_loader.py  test_fingerprint.py  test_normalization.py  test_router.py  test_stonkmode.py  test_svg_cards.py  test_syntax.py
types/: openclaw-plugin-sdk.d.ts
workers/: background_enricher.py
zeroclaw/: Dockerfile  SKILL.md  ZEROCLAW_PR.md  install.sh
(+2 files in other folders)
