[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "investorclaw"
version = "1.0.0"
description = "FINOS CDM 5.x-inspired portfolio analysis skill for OpenClaw agents"
license = { text = "MIT-0" }
requires-python = ">=3.10"
readme = "README.md"
keywords = ["portfolio", "finance", "openai", "openclaw", "finos"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "yfinance>=0.2.35",
    "requests>=2.31.0",
    "newsapi-python>=0.2.6",
    "pdfplumber>=0.9.0",
    "pypdf2>=3.0.0",
    "pdfminer-six>=20221105",
    "tabula-py>=2.3.0",
    "camelot-py>=0.11.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "orjson>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
pdf-reports = ["weasyprint>=62.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
investorclaw = "investorclaw:main"

[project.urls]
Homepage = "https://github.com/perlowja/InvestorClaw"
Repository = "https://github.com/perlowja/InvestorClaw"
Issues = "https://github.com/perlowja/InvestorClaw/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["commands*", "config*", "internal*", "models*", "providers*", "rendering*", "runtime*", "services*", "setup*", "workers*"]
